<resources>
    <string name="app_name">My News</string>

    <string name="menu_main_add_name">Add sections</string>
    <string name="menu_main_search_name">Search</string>
    <string name="menu_main_more_name">More</string>
    <string name="menu_main_notifications_name">Notifications</string>
    <string name="menu_main_help_name">Help</string>
    <string name="menu_main_about_name">About</string>

    <string-array name="view_pager_pages_names">
        <item>Top stories</item>
        <item>Most popular</item>
        <item>Research</item>
    </string-array>

    <string-array name="settings_pages_names">
        <item>Add topics</item>
        <item>Search articles</item>
        <item>Activate notifications</item>
    </string-array>

    <string name="dialog_neutral_button_text">OK</string>
    <string name="dialog_positive_button_text">Yes</string>
    <string name="dialog_negative_button_text">No</string>
    <string name="dialog_settings_caution_title">Caution</string>
    <string name="dialog_settings_caution_message">At least one key word and one section must be selected.</string>
    <string name="dialog_settings_back_title">Back</string>
    <string name="dialog_settings_back_message">Save the settings?</string>
    <string name="dialog_help_title">Help</string>
    <string name="dialog_help_message">Select \"Sheets\" to add or remove topics.\nSelect \"Search\" to search articles.\nSelect \"Notifications\" to activate or deactivate notifications.</string>
    <string name="dialog_about_title">About</string>
    <string name="dialog_about_message">My news provides different queries to read articles from the New York Times.</string>

    <string name="notification_title">My news</string>
    <string name="notification_text">New articles matching your criteria were published</string>

    <string name="message_request_error">Sorry, couldn\'t load the articles!</string>
    <string name="message_request_not_found">No article matching your criteria was found.</string>
    <string name="message_request_no_parameter">At least one key word and one section must be selected. You can set it the research options.</string>
    <string name="text_search_query_text">Search query term</string>
    <string name="text_begin_date_text">Begin date</string>
    <string name="text_end_date_text">End date</string>
    <string name="not_mandatory_text">Not mandatory</string>
    <string name="button_validate_text">Validate</string>
    <string name="button_search_text">Search</string>
    <string name="switch_notifications_text">Enable notifications (once per day)</string>


    <string-array name="sections_names">
        <item>Arts</item>
        <item>Automobiles</item>
        <item>Books</item>
        <item>Business</item>
        <item>Fashion</item>
        <item>Food</item>
        <item>Health</item>
        <item>Insider</item>
        <item>Magazine</item>
        <item>Movies</item>
        <item>National</item>
        <item>Ny Region</item>
        <item>Obituaries</item>
        <item>Opinion</item>
        <item>Politics</item>
        <item>Real estate</item>
        <item>Science</item>
        <item>Sports</item>
        <item>Technology</item>
        <item>Theater</item>
        <item>T Magazine</item>
        <item>Travel</item>
        <item>Upshot</item>
        <item>World</item>
    </string-array>

    <string name="section_name_default">Home</string>

</resources>
