<?xml version="1.0" encoding="utf-8"?>
<CheckBox xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/checkbox_section"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/component_margin"
    android:layout_marginEnd="@dimen/component_margin"
    android:text="Template"
    android:textSize="@dimen/text_size_normal">

</CheckBox>