<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".controller.fragments.SettingsSearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        <EditText
            android:id="@+id/fragment_settings_search_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/component_margin"
            android:ems="10"
            android:inputType="text"
            android:textSize="@dimen/text_size_title"
            android:hint="@string/text_search_query_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/component_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_begin_date_text"/>

                <EditText
                    android:id="@+id/fragment_settings_search_begin_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:textSize="@dimen/text_size_title"
                    android:hint="@string/not_mandatory_text"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="@dimen/component_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/text_end_date_text"/>

                <EditText
                    android:id="@+id/fragment_settings_search_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="none"
                    android:textSize="@dimen/text_size_title"
                    android:hint="@string/not_mandatory_text"/>

            </LinearLayout>

        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_settings_search_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
            android:id="@+id/fragment_settings_search_button_validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/component_margin"
            android:text="@string/button_search_text" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>