<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_main_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"
        android:title="@string/menu_main_add_name">
    </item>
    <item
        android:id="@+id/menu_main_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        android:title="@string/menu_main_search_name">
    </item>
    <item
        android:id="@+id/menu_main_more"
        android:icon="@drawable/ic_more"
        app:showAsAction="ifRoom"
        android:title="@string/menu_main_more_name">
        <item
            android:id="@+id/menu_main_notifications"
            android:title="@string/menu_main_notifications_name">
        </item>
        <item
            android:id="@+id/menu_main_help"
            android:title="@string/menu_main_help_name">
        </item>
        <item
            android:id="@+id/menu_main_about"
            android:title="@string/menu_main_about_name">
        </item>
    </item>
</menu>